# inventory

./: .README.md.un~  .db.c.un~  .db.h.un~  .gitignore  .main.c.un~  CMakeLists.txt  README.md  funcy.c  inventory  layout.glade  main.c  nested.c
Model/: .person.c.un~  .person.h.un~  person.c  person.h
